fix(TitleBlockZen): wrap navigation tabs in nav and list elements for accessibility

--- a/draft-packages/title-block-zen/KaizenDraft/TitleBlockZen/TitleBlockZen.module.scss
+++ b/draft-packages/title-block-zen/KaizenDraft/TitleBlockZen/TitleBlockZen.module.scss
@@ -391,7 +391,7 @@ $tab-container-height-medium-and-small-collapsed: 0;
 }
 
 .navigationTabsContainer {
-  display: flex;
+  // display: flex;
   height: $tab-container-height-default;
 
   @include title-block-small {
@@ -419,6 +419,18 @@ $tab-container-height-medium-and-small-collapsed: 0;
       }
     }
   }
+}
+
+.navigationTabsNav {
+  height: 100%;
+}
+
+.navigationTabsList {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  height: 100%;
 }
 
 .navigationTabEdgeShadow {
